--- a/templates/championPage.html
+++ b/templates/championPage.html
@@ -161,7 +161,8 @@
     <tr class="spacingRow"></tr>
     <tr>
         <td>
-            <img id="championImage" src="{{'static\\icons\\champions\\' ~ championName ~ '.jpg' }}">
+            <!-- <img id="championImage" src="{{'static\\icons\\champions\\' ~ championName ~ '.jpg' }}"> -->
+             <img id="championImage" src="{{ 'https://wiki.leagueoflegends.com/en-us/images/thumb/' ~champ ~ '_OriginalSquare.png/70px-'~ champ ~'_OriginalSquare.png?54659.png.webp' }}">
             <h2 stlye="margin-bottom: 0px;">{{ championName }}</h2>
         </td>
         <td>
